# Mini-App

./: .gitignore  CMakeLists.txt  LICENSE.txt  ReadMe.md  Row64.manifest  main.cpp
Blocks/: Blocks.h
Blocks/Chart/: CDR_Base.cpp  CDR_Base.h  CDR_Example.cpp  CDR_Example.h  CLO_Base.cpp  CLO_Base.h  CLO_Example.cpp  CLO_Example.h  CoreChartTypes.cpp  CoreChartTypes.h
Blocks/Fonts/: FontManager.cpp  FontManager.h
Blocks/Modal/: Block_ContextMenu.cpp  Block_ContextMenu.h  Block_Modal_Popups.cpp  Block_Modal_Popups.h
Blocks/PPG/: Block_PPG.cpp  Block_PPG.h  Block_PPG_Colors.cpp  Block_PPG_Colors.h  Block_PPG_Components.cpp  Block_PPG_Components.h  Block_PPG_EditSlider.cpp  Block_PPG_EditSlider.h  Test_PPG.cpp  Test_PPG.h
Blocks/Widget/: Block_Colors.cpp  Block_Colors.h  Block_NFD.cpp  Block_NFD.h  FocusManager.cpp  FocusManager.h  PPGManager.cpp  PPGManager.h
Doc/: Get_Started.md  Install_Notes.md
Include/Core/: c_DXBase.cpp  c_DXBase.h  c_Window.cpp  c_Window.h  ch_AppTimer.h  ch_FileSystem.cpp  ch_FileSystem.h  ch_Glm.h  ch_ThreadPool.cpp  ch_ThreadPool.h  ch_Tools.cpp  ch_Tools.h
Include/IO/: ByteStream.cpp  ByteStream.h  ByteStreamMacros.h
Include/Layouts/: c_LayoutManager.cpp  c_LayoutManager.h  c_PaneNode.h  c_PaneTree.h  c_PaneTreeManager.cpp  c_PaneTreeManager.h
Include/Networking/: ServerConnect.cpp  ServerConnect.h
Include/PipelineSetup/: Font_CodeBold.h  Font_CodeBoldItalic.h  Font_CodeItalic.h  Font_CodeRegular.h  Font_OsBold.h  Font_OsBoldItalic.h  Font_OsItalic.h  Font_OsRegular.h  c_PipelineManager.cpp  c_PipelineManager.h  c_TUI_PipelineBase.cpp  c_TUI_PipelineBase.h  ch_AppMessage.h  ch_Texture.cpp  ch_Texture.h
Include/TUI_Panes/: TUI_ChartSheet.cpp  TUI_ChartSheet.h  TUI_Overlay.cpp  TUI_Overlay.h  TUI_PaneBase.cpp  TUI_PaneBase.h
Include/User/: user_AppDataIO.cpp  user_AppDataIO.h  user_Includes.h  user_Layouts.cpp
Libraries/FileLib/: FileLib.cpp  FileLib.h
Libraries/MathLib/: MathLib.cpp  MathLib.h  MathLib.hpp
Libraries/StringLib/: StringLib.cpp  StringLib.h
Resources/: RESOURCES.RC
UILib/: UILib.cpp  UILib.h  UILibEditor.cpp  UILibForm.cpp  UILibInput.cpp  UILibText.cpp
